-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 2.8.1, Qt Creator 3.0.0-rc1
-
Windows 7
-
243a6259618e69b8da9ac2438480c449754f7f77
... if all changes are reverted.
The editor is automatically closed (and deleted), but is later referenced, which leads to a crash.
- resulted in
-
QTCREATORBUG-10235 Creator crashes on closing when opened a stored session
-
- Closed
-
| For Gerrit Dashboard: QTCREATORBUG-10190 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 66067,1 | EditorManager: Fix crash when closing an editor upon activation | master | qt-creator/qt-creator | Status: ABANDONED | 0 | 0 |
| 66068,1 | EditorManager: Fix crash when closing an editor upon activation | 2.8 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
| 66072,1 | EditorManager: Do not crash on editors that close while they become activated | master | qt-creator/qt-creator | Status: ABANDONED | 0 | 0 |
| 67502,3 | Revert "EditorManager: Fix crash when closing an editor upon activation" | 2.8 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |