EditorManager: Fix crash when closing an editor upon activation

* activateEditor receives a pointer to the editor.
* When currentEditorChanged is emitted (using a direct connection),
  closeEditor is called (because changes were reverted and the editor
  isn't needed anymore.
* closeEditor eventually deletes the editor
* Control is returned to activateEditor, which now references a deleted
  editor -> crash

Task-number: QTCREATORBUG-10190
Change-Id: I9062f03c1c1550f0a8c0c49c226dedcfd252eb12
Reviewed-by: Tobias Hunger <tobias.hunger@digia.com>
Reviewed-by: Petar Perisin <petar.perisin@gmail.com>